fix issue with compatibility

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -1645,7 +1645,7 @@ input.cmn-toggle-round:checked + label .no {
     margin-bottom: 35px;
     margin-left: 22%;
     li {
-      font-size: 24px;
+      font-size: 22px;
       line-height: 1;
       margin-bottom: 17px;
       position: relative;
@@ -1653,13 +1653,8 @@ input.cmn-toggle-round:checked + label .no {
         margin-bottom: 0;
       }
       &:before {
-        position: absolute;
-        top: -1px;
-        left: -46px;
-        color: #E9545E;
-        line-height: 1;
-        font-family: 'FontAwesome';
-        content: '\f058';
+          content: "• ";
+          color: #E9545E;
       }
     }
   }
